update for greater memory requirements